// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`counterSet renders 0 1`] = `
Array [
  .c0 {
  counter-set: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders function 1`] = `
Array [
  .c0 {
  counter-set: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: has;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: has;
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders invalid theme path 1`] = `
Array [
  .c0 {
  counter-set: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders negative number 1`] = `
Array [
  .c0 {
  counter-set: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    counter-set: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-set: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    counter-set: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-set: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-set: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-set: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-set: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-set: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-set: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    counter-set: July;
  }
}

@media April {
  .c0 {
    counter-set: August;
  }
}

@media January {
  .c0 {
    counter-set: September;
  }
}

@media April {
  .c0 {
    counter-set: November;
  }
}

@media June {
  .c0 {
    counter-set: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    counter-set: July;
  }
}

@media April {
  .c0 {
    counter-set: August;
  }
}

@media January {
  .c0 {
    counter-set: September;
  }
}

@media April {
  .c0 {
    counter-set: November;
  }
}

@media June {
  .c0 {
    counter-set: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-set: January;
  }
}

@media April {
  .c0 {
    counter-set: December;
  }
}

@media January {
  .c0 {
    counter-set: April;
  }
}

@media April {
  .c0 {
    counter-set: May;
  }
}

@media June {
  .c0 {
    counter-set: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-set: January;
  }
}

@media April {
  .c0 {
    counter-set: December;
  }
}

@media January {
  .c0 {
    counter-set: April;
  }
}

@media April {
  .c0 {
    counter-set: May;
  }
}

@media June {
  .c0 {
    counter-set: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders postitive number 1`] = `
Array [
  .c0 {
  counter-set: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders string 1`] = `
Array [
  .c0 {
  counter-set: July;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: July;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: June;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: June;
}

<div
    className="c0"
  />,
]
`;

exports[`counterSet renders valid theme path 1`] = `
Array [
  .c0 {
  counter-set: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-set: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
